# ExecEye

./: .env.template  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  serp_backbone.py  serp_results.db
src/: serp_backbone.py
src/tests/: test_suite.py
